Init webpack config
first test commit

remove lock.json file and new rule to .gitignore

fix TS aliases path, now it work as expected

remove useless files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@utils/*": ["/src/utils/*"]
+      "@utils/*": ["./utils/*"]
     }
   },
 
