Componets Part 2: Implement markup and styles for “Add movie”, “Edit”, “Delete” modal windows and “sorting”.
Componets Part 2: Implement markup and styles for “Add movie”, “Edit”, “Delete” modal windows and “sorting”.

Componets Part 2: Implement markup and styles for “Add movie”, “Edit”, “Delete” modal windows and “sorting”.

Compoents Part 2: Implement markup and styles for “Add movie”, “Edit”, “Delete” modal windows and “sorting”.

create styled version of Netflix Site

fix eslint riles and add some new rules

create input component

fix tsconfig aliases path

resolve .jpg files

create header components and container, start adding styles

has created header container

added HOC Component

create ErrorBoundary Component

create styled version of Netflix Site

create dropdown

start implementing add Movie Button functionality

create a couple of function in order to add several Inputs also create Folder for SmartComponents

added input on modal window with form; create handlers for each input

creat modal window with form

add delete movie modal and styles for it

fixed after code review (change 'create component' aproach; moved HOC to separate folder; and other small bugs)

Compoents Part 2: Implement markup and styles for “Add movie”, “Edit”, “Delete” modal windows and “sorting”.

create styled version of Netflix Site

fix eslint riles and add some new rules

create input component

fix tsconfig aliases path

resolve .jpg files

create header components and container, start adding styles

has created header container

added HOC Component

create ErrorBoundary Component

create styled version of Netflix Site

create dropdown

start implementing add Movie Button functionality

create a couple of function in order to add several Inputs also create Folder for SmartComponents

added input on modal window with form; create handlers for each input

creat modal window with form

add delete movie modal and styles for it

fixed after code review (change 'create component'

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix-shadow-copy",
   "version": "1.0.0",
   "description": "webpack for netflix application",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "webpack serve --open --env NODE_ENV=dev",
     "build": "webpack --mode production",
@@ -38,6 +38,7 @@
     "prettier": "2.4.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
