create styled version of Netflix Site
fix eslint riles and add some new rules

create input component

fix tsconfig aliases path

resolve .jpg files

create header components and container, start adding styles

has created header container

added HOC Component

create ErrorBoundary Component

create styled version of Netflix Site

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,14 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@utils/*": ["./utils/*"]
+      "@utils/*": ["./src/utils/*"],
+      "@assets/*": ["./assets/*"],
+      "@common/*": ["./src/components/common/*"]
     }
   },
 
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build"],
+  "include": ["./types/index.d.ts"]
 }
