--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
   "extends": ["plugin:prettier/recommended"],
   "rules": {
     "prettier/prettier": "error",
-    "eslint no-console": "error",
-    "eslint no-empty": "error"
+    "no-console": "error",
+    "no-debugger": "error",
+    "no-empty": "error",
+    "consistent-return": "error"
   }
 }
