--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tsconfig-paths": "^3.11.0",
     "tscpaths": "0.0.9"
   },
   "devDependencies": {
-    "@types/react": "^17.0.21",
+    "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
