--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.4",
     "tsconfig-paths": "^3.11.0",
     "tscpaths": "0.0.9"
   },
