Task 10: React Server-Side Rendering
Task 8: Add React Router to the application

Task 6: Implement BackEnd; add Redux

fix addMovie popup Genre input

Task 6: Implement BackEnd; add Redux

add redux; add redux-thunk; create store, reducers, actions; implement function to fetch data

add Redux ToolKit; rework logic

Task 7: Install formik, implement a possibility to “Add movie”, “Edit movie” and “Delete movie”

core refactor; rework logic, create new redux actions

cod refactor; implement addmoview functionality

1111

inplement addmovie option

create validation; (for all the fields except dropdown)

add validation; code refactor

task 8: Add React Router to the application

Task 9: Unit and component testing

configure jest tests

add few tests

code refactor

Task 10: React Server-Side Rendering

Task 10: Rename Store to Redux folder, split state into several reducers

create new server for SSR

create example of simple SSR

create initial context in order to avoid fetch data which you have already loaded on server side

last commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext",
     "target": "es5",
     "jsx": "react",
+    "lib": ["dom", "esnext"],
     "allowJs": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
