--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
-  }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/transform-arrow-functions",
+    "@babel/proposal-object-rest-spread",
+    "@babel/proposal-class-properties"
+  ]
+}
