--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.tsx",
   "scripts": {
     "start": "webpack serve --open --env NODE_ENV=dev",
-    "build": "webpack --mode production",
     "build-prod": "webpack --env NODE_ENV=prod",
     "build-dev": "webpack --env NODE_ENV=dev",
-    "code-check": "eslint src/components/** --fix --format table --max-warnings=0"
+    "code-check": "eslint src/components/** --fix --format table --max-warnings=0",
+    "test": "jest",
+    "test-info": "jest --collect-coverage",
+    "ui-test": "cypress open",
+    "server:ssr": "node server"
   },
   "author": "Tosha",
   "license": "MIT",
@@ -16,36 +19,57 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@types/react-redux": "^7.1.19",
     "classnames": "^2.3.1",
+    "history": "^5.1.0",
+    "jest": "^27.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.4",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "ts-jest": "^27.0.7",
     "tsconfig-paths": "^3.11.0",
     "tscpaths": "0.0.9"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/register": "^7.16.0",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.9",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/redux-mock-store": "^1.0.3",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "cypress": "^9.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "ignore-styles": "^5.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "prettier": "2.4.0",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.5.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
