--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@types/react-redux": "^7.1.19",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.4",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "tsconfig-paths": "^3.11.0",
     "tscpaths": "0.0.9"
   },
