--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.19",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
